--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -34,27 +34,27 @@ $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* default value */
-// /* type scale */
-// $type-size-1: 2.441em !default; // ~39.056px
-// $type-size-2: 1.953em !default; // ~31.248px
-// $type-size-3: 1.563em !default; // ~25.008px
-// $type-size-4: 1.25em !default; // ~20px
-// $type-size-5: 1em !default; // ~16px
-// $type-size-6: 0.75em !default; // ~12px
-// $type-size-7: 0.6875em !default; // ~11px
-// $type-size-8: 0.625em !default; // ~10px
-
 /* type scale */
-$type-size-1: 1.5em !default; // ~39.056px
-$type-size-2: 1.5em !default; // ~31.248px
-$type-size-3: 1.3em !default; // ~25.008px
-$type-size-4: 1.05em !default; // ~20px
-$type-size-5: 0.9em !default; // ~16px
-$type-size-6: 0.85em !default; // ~12px
-$type-size-7: 0.85em !default; // ~11px
-$type-size-8: 0.85em !default; // ~10px
-$code-size: 0.7em !default;
-$title-size: 0.8em !default;
+$type-size-1: 2.441em !default; // ~39.056px
+$type-size-2: 1.953em !default; // ~31.248px
+$type-size-3: 1.563em !default; // ~25.008px
+$type-size-4: 1.25em !default; // ~20px
+$type-size-5: 1em !default; // ~16px
+$type-size-6: 0.75em !default; // ~12px
+$type-size-7: 0.6875em !default; // ~11px
+$type-size-8: 0.625em !default; // ~10px
+
+// /* type scale */
+// $type-size-1: 1.5em !default; // ~39.056px
+// $type-size-2: 1.5em !default; // ~31.248px
+// $type-size-3: 1.3em !default; // ~25.008px
+// $type-size-4: 1.05em !default; // ~20px
+// $type-size-5: 0.9em !default; // ~16px
+// $type-size-6: 0.85em !default; // ~12px
+// $type-size-7: 0.85em !default; // ~11px
+// $type-size-8: 0.85em !default; // ~10px
+// $code-size: 0.7em !default;
+// $title-size: 0.8em !default;
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
